<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="20dp"
            android:gravity="center_horizontal"
            android:text="@string/howtoplay1_title"
            android:textColor="@color/howtoplay_color_title"
            android:textSize="@dimen/howtoplay_font_title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/howtoplay1_text1"
            android:textColor="@color/howtoplay_color_text"
            android:textSize="@dimen/howtoplay_font_text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/howtoplay1_text2"
            android:textColor="@color/howtoplay_color_text"
            android:textSize="@dimen/howtoplay_font_text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/howtoplay1_text3"
            android:textColor="@color/howtoplay_color_text"
            android:textSize="@dimen/howtoplay_font_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal">
        	
            <ImageView 
                android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:src="@android:drawable/ic_media_play"
	            android:layout_gravity="center_vertical"
	            android:contentDescription="@string/image_description"
	            android:rotation="180" />
            
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="10dp"
	            android:layout_marginStart="10dp"
	            android:layout_gravity="center_vertical"
	            android:text="@string/howtoplay1_text4"
	            android:textColor="@color/howtoplay_color_text"
	            android:textSize="@dimen/howtoplay_font_text" />
        
        </LinearLayout>
        
    </LinearLayout>

</ScrollView>