<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center_horizontal"
            android:text="@string/howtoplay2_title"
            android:textColor="@color/howtoplay_color_title"
            android:textSize="@dimen/howtoplay_font_title" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/image_description"
            android:src="@drawable/howtoplay1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/howtoplay2_text1"
            android:textColor="@color/howtoplay_color_text"
            android:textSize="@dimen/howtoplay_font_text" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/howtoplay2_text2"
            android:textColor="@color/howtoplay_color_text"
            android:textSize="@dimen/howtoplay_font_text" />
        
        <View 
            android:layout_width="wrap_content"
            android:layout_height="70dp" />
        
    </LinearLayout>

</ScrollView>